--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,5 +11,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build
-        run: swift build
+      - name: Build and test
+        run: |
+          swift build
+          swift test
